html form created

--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
         <meta name="keywords" content="form, personal, info">
         <meta name="description" content="Contact form">
         <title>Contact Form</title>
-        <!--<link rel="stylesheet" type="text/css"> -->
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
 
     <body>
+        <div class="box">
+             <form> 
+                 <label for="firstName">Imię: <br></label>
+                 <input type="text" id="firstName" name="firstName"><br><br>
+
+                 <label for="lastName">Nazwisko: <br></label>
+                 <input type="text" id="lastName" name="lastName"><br><br>
+
+                 <label for="birthDate">Data urodzenia: <br></label>
+                 <input type="date" id="birthDate" name="birthDate"><br><br>
+
+                 <label for="ageCheck">Czy masz ponad 18 lat? <br></label>
+                 <input type="checkbox" id="ageCheck" name="ageCheck"><br><br>
+
+            </form>
+        </div>
 
     </body>
 
